<resources>
    <string name="app_name">Syannah Absher</string>
    <string name="home_fragment">Home</string>
    <string name="orders_fragment">Orders</string>
    <string name="setting_fragment">More</string>
    <string name="google_maps_key">AIzaSyBY3c7RFvwzs06juEg0nzIU7PVERTIV3U8</string>
    <string name="empty_orders_msg">You didn\'t have any order yet</string>
    <string name="copyright_msg">Copyright ©</string>
    <string name="copyright_msg_other_part">Absher Inc. All rights reserved.</string>
    <string name="welcome_msg">Welcome,Mohamed</string>
    <string name="phone">Mobile Number</string>
    <string name="skip_login">Skip</string>
    <string name="continue_login">Continue</string>
    <string name="empty_phone_inputs">Write Your phone first</string>
    <string name="phone_verify_msg">verification code was sent to your phone</string>
    <string name="change_number_action">Change Number</string>
    <string name="confirm_login">Confirm</string>
    <string name="phone_verify_msg_plus_number">verification code sent to</string>
    <string name="empty_code">Enter verification code</string>
    <string name="not_get_verify_code">failed to get verification code?</string>
    <string name="resend_verify_code">resend</string>
    <string name="login_sucess">Login successfully</string>
    <string name="complete_code">Enter code with 6 numbers</string>
    <string name="notValidCode">the code was false</string>
    <string name="Invalid_phone">the phone number not valid</string>
    <string name="TooManyRequests">You tried more than normal, try again later</string>
    <string name="change_languge">Change language</string>
    <string name="order_history">Order history</string>
    <string name="user_profile">Your profile</string>
    <string name="user_address">Your addresses</string>
    <string name="previous_works">Previous works</string>
    <string name="previous_work">Previous works</string>
    <string name="about_us">About us</string>
    <string name="share_the_app">Share our app</string>
    <string name="suggest_and_complain">Suggestions and complains</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">Logout</string>
    <string name="welcome_msg_for_all">Hello</string>
    <string name="login_msg">Login</string>
    <string name="static_shortcut_label_short">label short</string>
    <string name="static_shortcut_label_long">label long</string>
    <string name="static_shortcut_disabled_message">"disabled msg "</string>
    <string name="radio_lang_Ar">عربى</string>
    <string name="radio_lang_En">English</string>
    <string name="save_lang">Save</string>
    <string name="languageNoTchanged">You select the same current language</string>
    <string name="select_language_first">select language first</string>
    <string name="service_search_hint">Search for a service</string>
    <string name="cancel_service_search">Cancel</string>
    <string name="no_service_availableCurrently">No Service Available Currently</string>
    <string name="order_service">Order Service</string>
    <string name="without_gender">Any</string>
    <string name="male_gender">Male</string>
    <string name="female_gender">Female</string>
    <string name="select_time_title">Choose time</string>
    <string name="select_date_title">Choose day</string>
    <string name="select_address_title">Pick the location on the map</string>
    <string name="building">Building No.</string>
    <string name="street">Street No.</string>
    <string name="area">Area No.</string>
    <string name="cleaning_material_included">Do you want cleaning material?</string>
    <string name="address_title">Address</string>
    <string name="worker_gender_title">Worker\'s Gender</string>
    <string name="worker_hours_title">Number of hours</string>
    <string name="workers_num_title">Number of workers</string>
    <string name="confirm_action">Confirm</string>
    <string name="current_location">Your current location</string>
    <string name="add_address">Add Address</string>
    <string name="your_address">Your Address</string>
    <string name="add_new_address">Add Address</string>
    <string name="choose_address">Change Address</string>
    <string name="there_is_no_address">There is no Address</string>
    <string name="pickAddressOnMapFirst">Pick address on map first</string>
    <string name="enter_all_address_inputs_data">fill all inputs fields</string>
    <string name="address_details">Address description</string>
    <string name="address_added_successfully">Address added successfully</string>
    <string name="area_no">Area</string>
    <string name="street_no">Street</string>
    <string name="building_no">Building</string>
    <string name="order_service_title">Order service</string>
    <string name="swipe_for_more">Swipe</string>
    <string name="share_app">share the app with your friends</string>
    <string name="message_details">Details</string>
    <string name="message_title">Subject</string>
    <string name="message_email">Email</string>
    <string name="message_name">Name</string>
    <string name="message_saved_successfully">Sent successfully</string>
    <string name="fill_all_inputs">Fill all inputs</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="info_email">Email :</string>
    <string name="info_phone">Phone : </string>
    <string name="no_previous_works">No Previous works</string>
    <string name="user_phone">Phone</string>
    <string name="user_email">Email</string>
    <string name="user_name">Name</string>
    <string name="user_saved_successfully">Your data updated successfully</string>
    <string name="policy_approve_action">Accept</string>
    <string name="terms_and_condition_title">Terms and conditions</string>
    <string name="select_worker_num">Select workers Numbers</string>
    <string name="ensure_you_confirm_all_data">You Must confirm all required data</string>
    <string name="approve_policy_first">You must accept terms and conditions</string>
    <string name="select_address_first">You must add Address</string>
    <string name="select_order_day">You must select order day</string>
    <string name="select_order_time">You must select order time</string>
    <string name="select_work_hours">You must select order hours</string>
    <string name="select_order_gender">You must select order gender</string>
    <string name="order_done_successfully">Order sent successfully</string>
    <string name="follow_order_state">View Order state</string>
    <string name="cancel_order_btn">Cancel order</string>
    <string name="order_state_tracking">Order state</string>
    <string name="order_no">"Order No "</string>
    <string name="address_order">Address</string>
    <string name="Order_StateCancelByUser">You canceled it</string>
    <string name="Order_StateCancelByProvider">Canceled by provider</string>
    <string name="Order_StateCancelByWorker">Canceled by worker</string>
    <string name="Order_StateDone">Order done</string>
    <string name="Order_StatePending">Waiting for provider approve</string>
    <string name="Order_StateCompleted">Order done successfully</string>
    <string name="Order_StateProcessing">Order in processing</string>
    <string name="for_service">for service</string>
    <string name="area_details">Area</string>
    <string name="street_details">Street</string>
    <string name="building_details">Building</string>
    <string name="phone_details">Phone</string>
    <string name="order_day_time">Order time</string>
    <string name="order_workers_num">Num of workers</string>
    <string name="order_working_hours">Num of hours</string>
    <string name="empty_orders_history_msg">there is no completed order till now</string>
    <string name="dayPm">PM</string>
    <string name="dayAm">AM</string>
    <string name="orders_current">Current Orders</string>
    <string name="enter_valid_number">Enter a valid number</string>
    <string name="must_login">You must login first</string>
    <string name="must_login_to_order">Login (To order a service)</string>
    <string name="cancel_successfully">Order has canceled</string>
    <string name="add_order_image_title">Add image of the problem</string>
    <string name="normal_order">Normal</string>
    <string name="urgent_order">Urgent</string>
    <string name="order_type_title">Order Type</string>
    <string name="order_text_image">Image of the problem</string>
    <string name="default_cost">Service Cost</string>
    <string name="default_currency">QAR</string>
    <string name="select_order_type">Select Service Type</string>
    <string name="upload_order_image">You Must add order image</string>
    <string name="urgent_order_item">Urgent Order</string>
    <string name="user_note">Note</string>
    <string name="review_order_btn">Rate</string>
    <string name="worker_processing_your_order">Worker is processing your order</string>
    <string name="tax_included">tax included</string>
    <string name="total_cost">Total Cost</string>
    <string name="currency_QAR">QAR</string>
    <string name="forfeit_cost">Previous Forfeit</string>
    <string name="service_cost">Service Cost</string>
    <string name="material_cost">Cleaning material cost</string>
    <string name="extra_cost">Spare cost</string>
    <string name="order_cost_title">Cost</string>
    <string name="rate_your_order">Rate Order</string>
    <string name="rate_screen_title">Rate Order</string>
    <string name="review_note">Review Note</string>
    <string name="rate_order_first">Must rate your order first</string>
    <string name="review_add_successfully">Your review added successfully</string>
    <string name="order_service_next">Next</string>
    <string name="no_orders">There is no orders</string>
    <string name="description_of_cleaning">Describe the unit to clean</string>
    <string name="description_of_maintenance">Describe the problem to fix</string>
    <string name="must_update_app_first">To continue update the app from google play</string>
    <string name="not_supported_location">Your current location no supported</string>
    <string name="cost_maybeChanges">Cost maybe changes depending on spares</string>
    <string name="return_to_home">Back to home</string>
    <string name="order_no_state">Order No</string>
    <string name="issue_in_identify_location">Can\'t define your current location</string>
    <string name="empty_country">Issue in finding location</string>
    <string name="null_country">Issue in finding location</string>
    <string name="order_stateOnTheWay">On the way</string>
    <string name="order_stateOnWorking">Working on now</string>
    <string name="driver_processing_your_order">Driver Start moving</string>
    <string name="driver_on_location_and_worker_starts">Driver on your address location</string>
    <string name="worker_onTheWay">Worker on the way to you</string>
    <string name="driver_on_the_way">Driver on the way to you</string>
    <string name="upadte_btn">Update</string>
    <string name="favorite_services">Favorites</string>
    <string name="free_and_private_services">Free and Private Services</string>
    <string name="service_subtype_title">Service type</string>
    <string name="other_fix">اخرى</string>
    <string name="must_select_fix">You must select service type</string>
    <string name="must_type_other_fix">You must type a details of the type of service</string>
    <string name="service_fix_hint">Description of the fix</string>
    <string-array name="Countries">
        <item>Qatar</item>
        <item>Egypt</item>
    </string-array>
    <string name="register_as_provider_action">Download provider\'s app</string>
    <string name="register_as_provider_title">Do you want to introduce your service with us</string>
    <string name="free_service_category_title">Free Services</string>
    <string name="login_with_google"> Login With Google </string>
</resources>